<resources>
    <string name="app_name">PPAbraldezPractica</string>
    <string name="nombre_producto">Nombre Producto</string>
    <string name="cantidad">"Cantidad: "</string>
    <string name="precio">"Precio: "</string>
    <string name="hintNombre">Nombre del producto</string>
    <string name="labelNombre">Ingrese nombre:</string>
    <string name="ingrese_cantidad">Ingrese cantidad:</string>
    <string name="ingrese_precio">Ingrese precio:</string>
    <string name="editName">Editar Nombre Producto Nº</string>
    <string name="enterNew">Ingrese el nuevo nombre</string>
    <string name="title">Productos</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
</resources>